{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 298,
  "lineage": "ada4075b-44e1-eee0-bca3-e7e838374a28",
  "resources": [
    {
      "module": "module.create_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "redhat_efs_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0299d82d412b669b3",
            "arn": "arn:aws:ec2:us-east-1:565604140614:instance/i-086acd7df42449f64",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "efs-ec2-instance-profile",
            "id": "i-086acd7df42449f64",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "key-stag-tf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e16d58352524f582",
            "private_dns": "ip-172-31-29-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.29.251",
            "public_dns": "ec2-18-234-215-216.compute-1.amazonaws.com",
            "public_ip": "18.234.215.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0d708a6f4f0cf54de",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20230516040323824300000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e541287fe7664e82",
            "tags": {
              "Name": "efs_ec2",
              "stream": "ipms"
            },
            "tags_all": {
              "Name": "efs_ec2",
              "stream": "ipms"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05245bb86d37202df"
            ]
          },
          "dependencies": [
            "module.create_efs_ec2_securitygroup.aws_security_group.ec2",
            "module.ec2-instance-profile.aws_iam_instance_profile.ec2-profile",
            "module.ec2-instance-profile.aws_iam_role.ipms_efs_ec2_role"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0299d82d412b669b3",
            "arn": "arn:aws:ec2:us-east-1:565604140614:instance/i-099685a9dcbdaa108",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "efs-ec2-instance-profile",
            "id": "i-099685a9dcbdaa108",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "key-stag-tf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f00ba75122309977",
            "private_dns": "ip-172-31-42-106.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.42.106",
            "public_dns": "ec2-18-232-92-38.compute-1.amazonaws.com",
            "public_ip": "18.232.92.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0c01a05577ae03e50",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20230516040323824300000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000ec6c8d264b8afb",
            "tags": {
              "Name": "efs_ec2",
              "stream": "ipms"
            },
            "tags_all": {
              "Name": "efs_ec2",
              "stream": "ipms"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05245bb86d37202df"
            ]
          },
          "dependencies": [
            "module.create_efs_ec2_securitygroup.aws_security_group.ec2",
            "module.ec2-instance-profile.aws_iam_instance_profile.ec2-profile",
            "module.ec2-instance-profile.aws_iam_role.ipms_efs_ec2_role"
          ]
        }
      ]
    },
    {
      "module": "module.create_efs_ec2_securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565604140614:security-group/sg-05245bb86d37202df",
            "description": "Allow efs outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05245bb86d37202df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230516040323824300000001",
            "name_prefix": "terraform-",
            "owner_id": "565604140614",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs_ec2_sg"
            },
            "tags_all": {
              "Name": "efs_ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cd16e9c52b23d2f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.create_efs_securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565604140614:security-group/sg-0095c86932de3a2c1",
            "description": "Allos inbound efs traffic from ec2",
            "egress": [],
            "id": "sg-0095c86932de3a2c1",
            "ingress": [],
            "name": "terraform-20230516040328066800000003",
            "name_prefix": "terraform-",
            "owner_id": "565604140614",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs_sg"
            },
            "tags_all": {
              "Name": "efs_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cd16e9c52b23d2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_efs_ec2_securitygroup.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.create_efs_securitygroup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_sg_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-399279954",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0095c86932de3a2c1",
            "security_group_rule_id": "sgr-03676aac35cfd429e",
            "self": false,
            "source_security_group_id": "sg-05245bb86d37202df",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_efs_ec2_securitygroup.aws_security_group.ec2",
            "module.create_efs_securitygroup.aws_security_group.efs"
          ]
        }
      ]
    },
    {
      "module": "module.create_efs_securitygroup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_sg_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1690884281",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0095c86932de3a2c1",
            "security_group_rule_id": "sgr-0184cdaded4624f7a",
            "self": false,
            "source_security_group_id": "sg-05245bb86d37202df",
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_efs_ec2_securitygroup.aws_security_group.ec2",
            "module.create_efs_securitygroup.aws_security_group.efs"
          ]
        }
      ]
    }
  ]
}